<resources>
    <string name="app_name">AnchorBooks</string>

    <string name="id">Id</string>
    <string name="author">Autor</string>
    <string name="country">Pais</string>
    <string name="Image">Imagen Producto</string>
    <string name="languaje">Idioma</string>
    <string name="title">Titulo</string>
    <string name="link">link</string>
    <string name="pages">Numero de paginas</string>
    <string name="year">Año de publicacion</string>
    <string name="price">Precio</string>
    <string name="lastprice">Precio Oferta</string>
    <string name="delivery">delivery</string>
    <string name="Botton">Boton flotante</string>

    <string name="Año">Año : </string>
    <string name="pagina">Cantidad de Paginas</string>
    <string name="lenguaje">Idioma : </string>
    <string name="pais">Pais : </string>



</resources>

